--- a/public/home.html
+++ b/public/home.html
@@ -115,7 +115,7 @@
         }
       } else {
         alert("No user logged in. Redirecting to login page.");
-        window.location.href = "index.html";
+        window.location.href = "controls_question1.html";
       }
     });
 
