--- a/public/rules_question2.html
+++ b/public/rules_question2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rules Question 2 - Drive Mzansi</title>
-  <link rel="stylesheet" href="public/css/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
   <style>
     /* Page styling for consistency */
     body {
@@ -125,7 +125,7 @@
     <p>&copy; 2024 Drive Mzansi</p>
   </footer>
 
-  <script src="public/js/timer.js"></script>
+  <script src="js/timer.js" type="module"></script>
   <script>
     document.getElementById('rules-q2').addEventListener('submit', function(e) {
       e.preventDefault();
