--- a/public/signs_question2.html
+++ b/public/signs_question2.html
@@ -109,10 +109,10 @@
     </div>
 
     <form id="signs-q2" style="text-align: center;">
-      <input type="radio" name="q2" value="A-Fastest speed you may drive" required> A-Fastest speed you may drive <br>
-      <input type="radio" name="q2" value="B-Slowest speed you may drive"> B-Slowest speed you may drive <br>
-      <input type="radio" name="q2" value="C-Distance to the next offramp"> C-Distance to the next offramp <br>
-      <input type="radio" name="q2" value="D-Minimum weight allowance"> D-Minimum weight allowance <br>
+      <input type="radio" name="q2" value="A-Fastest speed you may drive" id="q2-a" required aria-label="Fastest speed you may drive"> A-Fastest speed you may drive <br>
+      <input type="radio" name="q2" value="B-Slowest speed you may drive" id="q2-b" aria-label="Slowest speed you may drive"> B-Slowest speed you may drive <br>
+      <input type="radio" name="q2" value="C-Distance to the next offramp" id="q2-c" aria-label="Distance to the next offramp"> C-Distance to the next offramp <br>
+      <input type="radio" name="q2" value="D-Minimum weight allowance" id="q2-d" aria-label="Minimum weight allowance"> D-Minimum weight allowance <br>
 
       <div class="button-container">
         <a href="signs_question1.html" class="button back-button">Back</a> <!-- Back button -->
