--- a/public/controls_question2.html
+++ b/public/controls_question2.html
@@ -125,12 +125,31 @@
     <p>&copy; 2024 Drive Mzansi</p>
   </footer>
 
-  <script src="js/timer.js" type="module"></script>
   <script>
+    let timeLeft = 600; // 10 minutes in seconds
+    const timerDisplay = document.getElementById('timer');
+
+    function updateTimer() {
+      const minutes = Math.floor(timeLeft / 60);
+      const seconds = timeLeft % 60;
+      timerDisplay.textContent = `${String(minutes).padStart(2, '0')}:${String(seconds).padStart(2, '0')}`;
+
+      if (timeLeft <= 0) {
+        clearInterval(timerInterval);
+        alert("Time is up! Submitting your answers.");
+        document.getElementById('control-q2').submit(); // Automatically submit when time is up
+      }
+      timeLeft--;
+    }
+
+    const timerInterval = setInterval(updateTimer, 1000); // Update every second
+
     document.getElementById('control-q2').addEventListener('submit', function(e) {
       e.preventDefault();
+      clearInterval(timerInterval); // Stop the timer when the form is submitted
       window.location.href = 'controls_question3.html'; // Go to next question
     });
   </script>
 </body>
 </html>
+
