--- a/public/controls_question3.html
+++ b/public/controls_question3.html
@@ -127,6 +127,25 @@
 
   <script src="js/timer.js" type="module"></script>
   <script>
+    // Timer script
+    let timeLeft = 600; // 10 minutes in seconds
+    const timerDisplay = document.getElementById('timer');
+
+    function updateTimer() {
+      const minutes = Math.floor(timeLeft / 60);
+      const seconds = timeLeft % 60;
+      timerDisplay.textContent = `${String(minutes).padStart(2, '0')}:${String(seconds).padStart(2, '0')}`;
+
+      if (timeLeft <= 0) {
+        clearInterval(timerInterval);
+        alert("Time is up! Submitting your answers.");
+        document.getElementById('control-q3').submit(); // Automatically submit when time is up
+      }
+      timeLeft--;
+    }
+
+    const timerInterval = setInterval(updateTimer, 1000); // Update every second
+
     document.getElementById('control-q3').addEventListener('submit', function(e) {
       e.preventDefault();
       window.location.href = 'rules_question1.html'; // Go to next section (Rules)
@@ -134,3 +153,4 @@
   </script>
 </body>
 </html>
+
