--- a/public/signs_question1.html
+++ b/public/signs_question1.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Signs Question 1 - Drive Mzansi</title>
-  <link rel="stylesheet" href="css/styles.css"> <!-- Corrected path -->
+  <link rel="stylesheet" href="css/styles.css">
   <style>
     /* Page styling for consistency */
     body {
@@ -125,7 +125,7 @@
     <p>&copy; 2024 Drive Mzansi</p>
   </footer>
 
-  <script src="js/timer.js" type="module"></script> <!-- Corrected path -->
+  <script src="js/timer.js" type="module"></script> <!-- Include the timer script -->
   <script>
     document.getElementById('signs-q1').addEventListener('submit', function(e) {
       e.preventDefault();
@@ -134,3 +134,4 @@
   </script>
 </body>
 </html>
+
