--- a/public/controls_question2.html
+++ b/public/controls_question2.html
@@ -126,7 +126,7 @@
   </footer>
 
   <script>
-    let timeLeft = 600; // 10 minutes in seconds
+    let timeLeft = localStorage.getItem('timeLeft') ? parseInt(localStorage.getItem('timeLeft')) : 600; // Retrieve remaining time or set to 600 seconds
     const timerDisplay = document.getElementById('timer');
 
     function updateTimer() {
@@ -140,6 +140,7 @@
         document.getElementById('control-q2').submit(); // Automatically submit when time is up
       }
       timeLeft--;
+      localStorage.setItem('timeLeft', timeLeft); // Update remaining time in localStorage
     }
 
     const timerInterval = setInterval(updateTimer, 1000); // Update every second
@@ -147,9 +148,13 @@
     document.getElementById('control-q2').addEventListener('submit', function(e) {
       e.preventDefault();
       clearInterval(timerInterval); // Stop the timer when the form is submitted
+      localStorage.removeItem('timeLeft'); // Clear the timer from localStorage
       window.location.href = 'controls_question3.html'; // Go to next question
     });
+
+    window.onbeforeunload = function() {
+      localStorage.setItem('timeLeft', timeLeft); // Save remaining time before leaving the page
+    };
   </script>
 </body>
 </html>
-
