--- a/public/rules_question1.html
+++ b/public/rules_question1.html
@@ -125,8 +125,35 @@
     <p>&copy; 2024 Drive Mzansi</p>
   </footer>
 
-  <script src="js/timer.js" type="module"></script>
   <script>
+    // Timer initialization
+    let timeLeft = localStorage.getItem('timeLeft');
+    if (!timeLeft) {
+      timeLeft = 600; // 10 minutes in seconds
+      localStorage.setItem('timeLeft', timeLeft);
+    } else {
+      timeLeft = parseInt(timeLeft);
+    }
+
+    const timerDisplay = document.getElementById('timer');
+
+    function updateTimer() {
+      const minutes = Math.floor(timeLeft / 60);
+      const seconds = timeLeft % 60;
+      timerDisplay.textContent = `${String(minutes).padStart(2, '0')}:${String(seconds).padStart(2, '0')}`;
+
+      if (timeLeft <= 0) {
+        clearInterval(timerInterval);
+        alert("Time is up! Submitting your answers.");
+        document.getElementById('rules-q1').submit(); // Automatically submit when time is up
+      } else {
+        timeLeft--;
+        localStorage.setItem('timeLeft', timeLeft); // Update the remaining time
+      }
+    }
+
+    const timerInterval = setInterval(updateTimer, 1000); // Update every second
+
     document.getElementById('rules-q1').addEventListener('submit', function(e) {
       e.preventDefault();
       window.location.href = 'rules_question2.html'; // Go to next question
@@ -134,3 +161,4 @@
   </script>
 </body>
 </html>
+
