--- a/public/rules_question2.html
+++ b/public/rules_question2.html
@@ -125,12 +125,30 @@
     <p>&copy; 2024 Drive Mzansi</p>
   </footer>
 
-  <script src="js/timer.js" type="module"></script>
   <script>
+    // Timer functionality
+    let timeLeft = 600; // 10 minutes in seconds
+    const timerElement = document.getElementById('timer');
+
+    const countdown = setInterval(() => {
+      const minutes = Math.floor(timeLeft / 60);
+      const seconds = timeLeft % 60;
+      timerElement.textContent = `${minutes}:${seconds < 10 ? '0' : ''}${seconds}`;
+
+      if (timeLeft <= 0) {
+        clearInterval(countdown);
+        alert("Time's up! Redirecting to the results page.");
+        window.location.href = 'results.html'; // Redirect to results page when time is up
+      }
+      timeLeft--;
+    }, 1000);
+
     document.getElementById('rules-q2').addEventListener('submit', function(e) {
       e.preventDefault();
+      clearInterval(countdown); // Stop the timer when moving to the next question
       window.location.href = 'rules_question3.html'; // Go to next question
     });
   </script>
 </body>
 </html>
+
