--- a/public/signs_question2.html
+++ b/public/signs_question2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Signs Question 2 - Drive Mzansi</title>
-  <link rel="stylesheet" href="public/css/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
   <style>
     /* Page styling for consistency */
     body {
@@ -67,25 +67,25 @@
 
     .button {
       padding: 10px 15px;
-      background-color: #4CAF50; /* Green background */
+      background-color: #4CAF50;
       color: white;
       border: none;
       border-radius: 5px;
       cursor: pointer;
-      margin: 0 5px; /* Add space between buttons */
-      text-decoration: none; /* Ensure no underline */
+      margin: 0 5px;
+      text-decoration: none;
     }
 
     .button:hover {
-      background-color: #45a049; /* Darker green on hover */
+      background-color: #45a049;
     }
 
     .back-button {
-      background-color: #f44336; /* Red background for back button */
+      background-color: #f44336;
     }
 
     .back-button:hover {
-      background-color: #d32f2f; /* Darker red on hover */
+      background-color: #d32f2f;
     }
   </style>
 </head>
@@ -125,10 +125,33 @@
     <p>&copy; 2024 Drive Mzansi</p>
   </footer>
 
-  <script src="public/js/timer.js"></script>
+  <script src="js/timer.js"></script>
   <script>
+    // Timer functionality
+    let timeLeft = localStorage.getItem('timeLeft') ? parseInt(localStorage.getItem('timeLeft')) : 600; // 10 minutes in seconds
+    const timerDisplay = document.getElementById('timer');
+
+    function updateTimer() {
+      const minutes = Math.floor(timeLeft / 60);
+      const seconds = timeLeft % 60;
+      timerDisplay.textContent = `${String(minutes).padStart(2, '0')}:${String(seconds).padStart(2, '0')}`;
+
+      if (timeLeft <= 0) {
+        clearInterval(timerInterval);
+        alert("Time is up! Submitting your answers.");
+        document.getElementById('signs-q2').submit(); // Automatically submit the form when time is up
+      } else {
+        timeLeft--;
+        localStorage.setItem('timeLeft', timeLeft); // Save remaining time to localStorage
+      }
+    }
+
+    const timerInterval = setInterval(updateTimer, 1000); // Update every second
+
     document.getElementById('signs-q2').addEventListener('submit', function(e) {
       e.preventDefault();
+      clearInterval(timerInterval); // Stop the timer when the form is submitted
+      localStorage.setItem('timeLeft', timeLeft); // Save remaining time to localStorage
       window.location.href = 'signs_question3.html'; // Go to next question
     });
   </script>
