--- a/public/rules_question2.html
+++ b/public/rules_question2.html
@@ -127,7 +127,14 @@
 
   <script>
     // Timer functionality
-    let timeLeft = 600; // 10 minutes in seconds
+    let timeLeft = localStorage.getItem('timeLeft');
+    if (!timeLeft) {
+      timeLeft = 600; // 10 minutes in seconds
+      localStorage.setItem('timeLeft', timeLeft);
+    } else {
+      timeLeft = parseInt(timeLeft);
+    }
+
     const timerElement = document.getElementById('timer');
 
     const countdown = setInterval(() => {
@@ -141,14 +148,15 @@
         window.location.href = 'results.html'; // Redirect to results page when time is up
       }
       timeLeft--;
+      localStorage.setItem('timeLeft', timeLeft); // Update the remaining time
     }, 1000);
 
     document.getElementById('rules-q2').addEventListener('submit', function(e) {
       e.preventDefault();
       clearInterval(countdown); // Stop the timer when moving to the next question
+      localStorage.removeItem('timeLeft'); // Clear timer from local storage
       window.location.href = 'rules_question3.html'; // Go to next question
     });
   </script>
 </body>
 </html>
-
