--- a/public/signs_question1.html
+++ b/public/signs_question1.html
@@ -125,8 +125,38 @@
     <p>&copy; 2024 Drive Mzansi</p>
   </footer>
 
-  <script src="js/timer.js" type="module"></script> <!-- Include the timer script -->
   <script>
+    // Timer logic
+    const initialTime = 10 * 60; // 10 minutes in seconds
+    let timeLeft = localStorage.getItem('timeLeft') ? parseInt(localStorage.getItem('timeLeft')) : initialTime;
+
+    function updateTimer() {
+      const minutes = Math.floor(timeLeft / 60);
+      const seconds = timeLeft % 60;
+      document.getElementById('timer').textContent = `${String(minutes).padStart(2, '0')}:${String(seconds).padStart(2, '0')}`;
+      if (timeLeft > 0) {
+        timeLeft--;
+        localStorage.setItem('timeLeft', timeLeft);
+      } else {
+        alert("Time's up! You will be redirected.");
+        window.location.href = 'results.html'; // Redirect to results or any desired page when time is up
+      }
+    }
+
+    // Start the timer
+    setInterval(updateTimer, 1000);
+
+    // Reset timer on page load
+    window.onload = function() {
+      const savedTime = localStorage.getItem('timeLeft');
+      if (savedTime && savedTime < initialTime) {
+        timeLeft = parseInt(savedTime);
+      } else {
+        localStorage.setItem('timeLeft', initialTime);
+      }
+    };
+
+    // Handle form submission
     document.getElementById('signs-q1').addEventListener('submit', function(e) {
       e.preventDefault();
       window.location.href = 'signs_question2.html'; // Go to next question
@@ -134,4 +164,3 @@
   </script>
 </body>
 </html>
-
