--- a/public/signs_question2.html
+++ b/public/signs_question2.html
@@ -154,7 +154,9 @@
       if (selectedAnswer) { // Check if an answer is selected
         clearInterval(timerInterval); // Stop the timer when the form is submitted
         localStorage.setItem('timeLeft', timeLeft); // Save remaining time to localStorage
-        window.location.href = 'signs_question3.html'; // Go to next question
+        setTimeout(() => {
+          window.location.href = 'signs_question3.html'; // Go to next question
+        }, 100); // Small delay to ensure interval is cleared
       } else {
         alert('Please select an answer before proceeding.'); // Alert if no answer is selected
       }
