--- a/public/signs_question2.html
+++ b/public/signs_question2.html
@@ -125,29 +125,10 @@
     <p>&copy; 2024 Drive Mzansi</p>
   </footer>
 
+  <!-- Include timer.js for timer functionality -->
   <script src="js/timer.js"></script>
+
   <script>
-    // Timer functionality
-    let timeLeft = localStorage.getItem('timeLeft') ? parseInt(localStorage.getItem('timeLeft')) : 600; // 10 minutes in seconds
-    const timerDisplay = document.getElementById('timer');
-
-    function updateTimer() {
-      const minutes = Math.floor(timeLeft / 60);
-      const seconds = timeLeft % 60;
-      timerDisplay.textContent = `${String(minutes).padStart(2, '0')}:${String(seconds).padStart(2, '0')}`;
-
-      if (timeLeft <= 0) {
-        clearInterval(timerInterval);
-        alert("Time is up! Submitting your answers.");
-        document.getElementById('signs-q2').submit(); // Automatically submit the form when time is up
-      } else {
-        timeLeft--;
-        localStorage.setItem('timeLeft', timeLeft); // Save remaining time to localStorage
-      }
-    }
-
-    const timerInterval = setInterval(updateTimer, 1000); // Update every second
-
     document.getElementById('signs-q2').addEventListener('submit', function(e) {
       e.preventDefault();
       const selectedAnswer = document.querySelector('input[name="q2"]:checked'); // Get selected radio button
@@ -164,3 +145,4 @@
   </script>
 </body>
 </html>
+
