--- a/public/results.html
+++ b/public/results.html
@@ -95,11 +95,15 @@
   <script>
     // Correct answers for the quiz
     const correctAnswers = {
-      'q1': 'A-1',  // Update these to the actual correct answers
-      'q2': 'B-6',
-      'q3': 'C-8',
-      // Add more correct answers for other questions
-      // ...
+      control_q1: 'A', // Correct answer for Control Question 1
+      control_q2: 'B', // Correct answer for Control Question 2
+      control_q3: 'C', // Correct answer for Control Question 3
+      rules_q1: 'A',   // Correct answer for Rules Question 1
+      rules_q2: 'B',   // Correct answer for Rules Question 2
+      rules_q3: 'C',   // Correct answer for Rules Question 3
+      signs_q1: 'A',   // Correct answer for Signs Question 1
+      signs_q2: 'B',   // Correct answer for Signs Question 2
+      signs_q3: 'C'    // Correct answer for Signs Question 3
     };
 
     // Function to display results
@@ -140,3 +144,4 @@
   </script>
 </body>
 </html>
+
