--- a/public/results.html
+++ b/public/results.html
@@ -95,11 +95,11 @@
   <script>
     // Correct answers for the quiz
     const correctAnswers = {
-        'control_q1': 'A', // Correct answer for Control Question 1
-        'control_q2': 'B', // Correct answer for Control Question 2
-        'control_q3': 'C', // Correct answer for Control Question 3
+        'control_q1': 'C', // Correct answer for Control Question 1
+        'control_q2': 'C', // Correct answer for Control Question 2
+        'control_q3': 'B', // Correct answer for Control Question 3
         'rules_q1': 'A',   // Correct answer for Rules Question 1
-        'rules_q2': 'B',   // Correct answer for Rules Question 2
+        'rules_q2': 'C',   // Correct answer for Rules Question 2
         'rules_q3': 'C',   // Correct answer for Rules Question 3
         'signs_q1': 'A',   // Correct answer for Signs Question 1
         'signs_q2': 'B',   // Correct answer for Signs Question 2
