--- a/public/home.html
+++ b/public/home.html
@@ -89,7 +89,7 @@
     <h1>Welcome!</h1>
     <h4>Take the Test</h4>
     <p>Note: This computerized test is just like the official K53 Learner’s Test for 
-      Light & Heavy Motor Vehicle (Code 2). 
+      Light (Code 2) & Heavy Motor Vehicle (Code 3). 
       Click the “Next” button at the bottom of the page to navigate to the next set of questions.</p>
     
     <!-- Table added here -->
