--- a/public/profile.html
+++ b/public/profile.html
@@ -88,6 +88,8 @@
     <div id="results-container">
       <!-- Test results will be dynamically loaded here -->
     </div>
+    <p>When you are confident that you are fully prepared for the exam, you can book online 
+      for your K53 Learner’s Test date on the official <a href="https://online.natis.gov.za/#/" target="_blank">NATIS</a> website. </p>
   </main>
 
   <footer>&copy; 2024 Drive Mzansi</footer>
