--- a/public/home.html
+++ b/public/home.html
@@ -90,7 +90,7 @@
     <h4>Take the Test</h4>
     <p>Note: This computerized test is just like the official K53 Learner’s Test for 
       Light (Code 2) & Heavy Motor Vehicle (Code 3). 
-      Click the “Next” button at the bottom of the page to navigate to the next set of questions.</p>
+      Click the "Start Test" button to start the test and the “Next” button at the bottom of the page to navigate to the next set of questions.</p>
     
     <!-- Table added here -->
     <table>
